[KL-441] fix  announcement's z-index

--- a/src/app/announcement/announcement.component.scss
+++ b/src/app/announcement/announcement.component.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   background-color: #259B9A;
-  z-index: 25;
+  z-index: 20;
 
   &__text {
     margin: 0;
